Fixed z-index for category buttons

--- a/src/components/crafting-page/crafting-page.css
+++ b/src/components/crafting-page/crafting-page.css
@@ -8,7 +8,7 @@
 
 .equipment-category-buttons-wrapper {
   width: 100%;
-  z-index: 10;
+  z-index: 4;
   overflow: hidden;
   white-space: nowrap;
   display: flex;
