--- a/src/components/farming-page/farming-page.css
+++ b/src/components/farming-page/farming-page.css
@@ -8,7 +8,7 @@
 
 .category-buttons-wrapper {
   width: 100%;
-  z-index: 10; 
+  z-index: 4; 
   overflow: hidden;
   white-space: nowrap;
   display: flex;
